--- a/app/styles/components/popover.less
+++ b/app/styles/components/popover.less
@@ -9,7 +9,7 @@
 \* ------------------------------------ */
 
 .pnd-popover {
-    max-width: 350px;
+    max-width: 320px;
     padding: 0;
     background-color: @popover-bg-color;
     border: 1px solid @popover-border-color;
